Terminei as paradas de segurança, ta pronto essa poha \O/