@@ -1,6 +1,7 @@
 package dao.jinq;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import dao.IPratoDao;
 import model.Prato;
@@ -15,14 +16,21 @@ public class PratoDao extends GenericDaoJinq<Prato> implements IPratoDao {
 		return getStream().where(o -> o.getFoodTruck().getId() == fk)
 						  .select(o -> o)
 						  .sortedBy(o -> o.getId())
-				          .toList();
+				          .toList()
+				          .stream()
+				          .map(o -> o.descriptografar())
+				          .collect(Collectors.toList());
 	}
 	
 	@Override
 	public List<Prato> filtrarPorFoodTruckENome(int fk, String nomePrato) {
-		return getStream().where(o -> o.getFoodTruck().getId() == fk && o.getNome().contains(nomePrato))
+		return getStream().where(o -> o.getFoodTruck().getId() == fk)
 				.select(o -> o)
 				.sortedBy(o -> o.getId())
-				.toList();
+				.toList()
+	            .stream()
+	            .map(o -> o.descriptografar())
+	            .filter(o -> o.getNome().contains(nomePrato))
+	            .collect(Collectors.toList());
 	}
 }
